--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>
-            Abierto 24h / siempre
+            Abierto 24h 
         </h1>
     </div>
     
